--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "php component shutdown",
     "keywords": ["php", "net_bazzline", "component", "shutdown"],
     "homepage": "https://github.com/stevleibelt/php_component_shutdown",
-    "license": "GPLv3",
+    "license": "LGPLv3",
     "authors": [
 	    {
             "name": "Stev Leibelt",
